[metadata]
name = yw
version = 0.0.9
url = https://github.com/t-c-w/yw
platforms = any
description_file = README.md
description = Audio Layers
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = yw

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

